--- a/src/components/UploadModal/styles.css
+++ b/src/components/UploadModal/styles.css
@@ -1,4 +1,4 @@
-.modal-background {
+/* .modal-background {
   position: fixed;
   z-index: 10;
   left: 0px;
@@ -15,11 +15,11 @@
   border-radius: 20px;
   z-index: 100;
   width: 50%;
-  /* transform: translate(-50%, -50%); */
+   transform: translate(-50%, -50%);
   border-radius: 1rem;
   left: 25%;
   top: 5%;
-}
+} */
 .spinnerWrapper {
   margin: 10px 40%;
 }
