relaod the page Home to reflect the changes made in the image data array:update,upload,delete

--- a/src/components/FileInput/fileInput.css
+++ b/src/components/FileInput/fileInput.css
@@ -4,10 +4,10 @@
 .custom-file-input::before {
   content: "+";
   display: inline-block;
-
+  margin: 0 auto;
   border: 1px solid var(--global-color-font);
   border-radius: 20%;
-  padding: 20%;
+  padding: 10%;
   outline: none;
   white-space: nowrap;
   -webkit-user-select: none;
@@ -30,6 +30,6 @@
   background: -webkit-linear-gradient(top, #e3e3e3, #f9f9f9);
 }
 .inputWrepper {
-  max-width: 300px;
+  max-width: 150px;
   overflow: hidden;
 }
