--- a/src/components/UploadModal/styles.css
+++ b/src/components/UploadModal/styles.css
@@ -20,9 +20,9 @@
   left: 25%;
   top: 5%;
 } */
-.spinnerWrapper {
+/* .spinnerWrapper {
   margin: 10px 40%;
-}
+} */
 .cancel-button {
   cursor: pointer;
 }
@@ -33,12 +33,12 @@
 .titleUpdate {
   font-family: var(--global-font);
   color: var(--global-color-font);
-  font-size: 80px;
+  font-size: 40px;
 }
 .titleUpdateShort {
   font-family: var(--global-font);
   color: var(--global-color-font);
-  font-size: 40px;
+  font-size: 20px;
 }
 @media (max-width: 425px) {
   .track-upload {
