--- a/src/components/Spinner/spinner.css
+++ b/src/components/Spinner/spinner.css
@@ -29,7 +29,7 @@
   display: block;
   border-radius: 50%;
   position: relative;
-  border: calc(60px * 0.1) solid var(--global-color-font);
+  border: calc(60px * 0.1) solid #a4fcdc;
   animation: fulfilling-bouncing-circle-spinner-circle-animation infinite 4000ms
     ease;
   transform: rotate(0deg) scale(1);
